2008-03-21  Badlop  <badlop@process-one.net>

	* src/cyrsasl_digest.erl: Rewrite io:format calls to loglevel
	macros (EJAB-555)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_ctl.erl: Likewise
	* src/ejabberd_loglevel.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_update.erl: Likewise
	* src/extauth.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/shaper.erl: Likewise
	* src/tls/tls.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

	* src/ejabberd.hrl: New macro ?PRINT(Format, Args) to print in
	standard output

2008-03-20  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve explanation of how to start ejabberd when
	binary installer. Don't recommend R12 in Windows compilation.
	Describe what happens if maxrate shaper is exceeded.
	* doc/guide.html: Likewise

2008-03-20  Mickael Remond  <mremond@process-one.net>

	* src/eldap.erl: Improved logging. We now use ejabberd logging
	framework (EJAB-582).

	* src/eldap.erl: Faster LDAP reconnection (Thanks to Christophe
	Romain) (EJAB-581)
					 
2008-03-17  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: Only trigger s2s_connect_hook on
	successful connection (EJAB-566)
	* src/ejabberd_s2s_out.erl: Likewise

2008-03-15  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: API improvement: Added s2s_connect_hook
	(EJAB-566).

2008-03-13  Badlop  <badlop@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Start ODBC explicitely because
	Erlang R12 doesn't start automatically like in R11 and
	older (thanks to Sergei Golovan)(EJAB-541)

	* src/ejabberd.hrl: Removed unused ejabberd_debug and
	PRIVACY_SUPPORT. Reordered the remaining options

	* doc/guide.tex: Describe option Matches in mod_vcard_ldap (thanks
	to Evgeniy Khramtsov)(EJAB-530).  Fix typo in the description of
	ldap_server option.
	* doc/guide.html: Likewise

	* src/mod_echo.erl: Small change to avoid a compilation warning of
	unused function
